--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
     try {
       await Promise.race([
-        fetch('https://drillinginc.onrender.com', {
+        fetch('https://smartforms.dev/submit/696a178bc184545ccc218485', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/x-www-form-urlencoded'
@@ -368,5 +368,6 @@
 
 </body>
 </html>
+
 
 
